log
Thu May 12 15:20:26 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|5
total_score: 0/70
8412f1e
Thu May 12 15:20:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
447dee7
Thu May 12 15:46:29 UTC 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
       for(int j = 0, j < 9; j++){
                        ^
sudoku.c:48:32: error: expected ‘;’ before ‘)’ token
       for(int j = 0, j < 9; j++){
                                ^
sudoku.c:50:28: error: expected ‘;’ before ‘k’
         for(int k = 0; k<9 k++){
                            ^
sudoku.c:51:21: error: ‘sudo’ undeclared (first use in this function)
           if(num == sudo[k][j] || num == sudo[j][k]){
                     ^~~~
sudoku.c:51:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8114338
Thu May 12 15:46:36 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
       for(int j = 0, j < 9; j++){
                        ^
sudoku.c:48:32: error: expected ‘;’ before ‘)’ token
       for(int j = 0, j < 9; j++){
                                ^
sudoku.c:51:21: error: ‘sudo’ undeclared (first use in this function)
           if(num == sudo[k][j] || num == sudo[j][k]){
                     ^~~~
sudoku.c:51:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3b07205
Thu May 12 15:46:44 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:21: error: ‘sudo’ undeclared (first use in this function)
           if(num == sudo[k][j] || num == sudo[j][k]){
                     ^~~~
sudoku.c:51:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ab8c124
Thu May 12 15:46:52 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:45: error: ‘sudo’ undeclared (first use in this function)
           if(num == n->sudo[k][j] || num == sudo[j][k]){
                                             ^~~~
sudoku.c:51:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e03c547
Thu May 12 15:47:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
47b4fb5
Thu May 12 15:47:47 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
e3aa090
Thu May 12 15:49:05 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8533957
Thu May 12 15:53:53 UTC 2022: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
906532c
Thu May 12 16:05:00 UTC 2022: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
f9fd1f7
Thu May 12 16:07:39 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
1afa2ec
Sat May 14 21:28:44 UTC 2022: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
4c733c8
Sat May 14 22:05:10 UTC 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
4d20350
Sat May 14 22:07:05 UTC 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
4590008
Sun May 15 17:58:04 UTC 2022: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:70:11: error: ‘num’ undeclared (first use in this function)
           num = n -> sudo[k][u];
           ^~~
sudoku.c:70:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fdb3262
Sun May 15 17:58:12 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
eb419fa
Sun May 15 18:00:01 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2ea2878
Sun May 15 18:03:47 UTC 2022: 
 sudoku.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
881a708
Sun May 15 18:04:56 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|4
total_score: 10/70
4043a7c
Sun May 15 18:08:40 UTC 2022: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
4048587
Sun May 15 18:11:09 UTC 2022: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
0e86345
Sun May 15 18:11:31 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
9425863
